# app/controllers/users_controller.rb
@@ -1,12 +1,10 @@
 class UsersController < ApplicationController
 
-  
   def create
-    user = User.new(user_params)
+    @user = User.new(user_params)
   
     if user.save
-      
-      render json: {status: 'User created successfully'}, status: :created
+      render json: @user, status: :created
     else
       render json: { errors: user.errors.full_messages }, status: :bad_request
     end
@@ -15,10 +13,10 @@ class UsersController < ApplicationController
 
   
   def login
-    user = User.find_by(email: params[:email].to_s.downcase)
+    @user = User.find_by(email: params[:email].to_s.downcase)
   
-    if user && user.authenticate(params[:password])
-      auth_token = JsonWebToken.encode({user_id: user.id})
+    if @user && @user.authenticate(params[:password])
+      auth_token = JsonWebToken.encode({user_id: @user.id})
       render json: {auth_token: auth_token}, status: :ok
     else
       render json: {error: 'Invalid username / password'}, status: :unauthorized
@@ -27,8 +25,8 @@ class UsersController < ApplicationController
 
   private
   
-  def user_params
-    params.require(:user).permit(:email, :password, :password_confirmation)
-  end
+    def user_params
+      params.require(:user).permit(:email, :password, :password_confirmation)
+    end
 
 end
